Fix Icon Shifts

--- a/app/assets/stylesheets/components/_overview.css.sass
+++ b/app/assets/stylesheets/components/_overview.css.sass
@@ -25,8 +25,13 @@
       font-size: 2.5em
       line-height: 2em
       margin: -2px 0 -1px -2px
-      padding: 0.33em 0 0.25em
+      padding: 0.33em 0 0.33em
       @include inline-block()
+
+      &:before
+        width: 100%
+        text-align: center
+        @include inline-block()
 
     .overview-content
       width: 66%
